# fcvaproject

./: .gitignore  README.md  example_mediapipe.py  example_mediapipe.spec  example_mediapipeMAC.spec  pyproject.toml  t1.py  ww.py
